# shipping-capacity

./: .env.Example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.env.Example  deploy.sh  docker-compose.local.yml  pyproject.toml  pytest.ini  run_app.sh
app/: config.py  logging_config.py  main.py
app/api/: __init__.py  api.py  health.py  schemas.py
app/capacity/: api.py  query_builder.py  schemas.py  service.py  util.py
app/database/: base_class.py  model.py  session.py  utils.py
app/database/utils/: __init__.py  clean_table.py  etl_pipeline.py
app/migrations/: env.py
app/migrations/versions/: 21cd0e8f00f7_fix_wrong_column_service_version_and_.py  58462baa962f_add_index.py  b6d2f47fc83c_add_auto_uuid_and_create_at_and_update_.py  f94db5345d98_create_data_table.py
app/security/: middleware.py
app/tests/: conftest.py  test_api.py  test_api_integration.py  test_capacity_calculation.py  test_etl_pipeline.py  test_migrations.py
scripts/: etl_manager.py
